Top Bar said Blogs
Deleted "blogs"

--- a/topbar.html
+++ b/topbar.html
@@ -19,7 +19,7 @@
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Links&structure=Community" class="w3-bar-item w3-button">General Information Links</a>
     </div>
   </div>
-  <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Articles" class="w3-bar-item w3-button w3-hide-small">Articles and Blogs</a>
+  <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Articles" class="w3-bar-item w3-button w3-hide-small">Articles</a>
   <a href="http://wiki.dicecoalition.com" class="w3-bar-item w3-button w3-hide-small">Wiki</a>
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button" title="Notifications">New Players <i class="fa fa-caret-down"></i></button>
@@ -40,7 +40,7 @@
     <a href="http://dicecoalition.com/teambuilder.html" class="w3-bar-item w3-button">Team Builder</a>
     <a href="http://dicecoalition.com/tiki/tiki-index.php?page=New+Players" class="w3-bar-item w3-button">New Players</a>
     <a href="http://wiki.dicecoalition.com" class="w3-bar-item w3-button">Wiki</a>
-    <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Articles" class="w3-bar-item w3-button">Articles and Blogs</a>
+    <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Articles" class="w3-bar-item w3-button">Articles</a>
     <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Community" class="w3-bar-item w3-button">Community</a>
 	<a href="http://dicecoalition.com/tiki/tiki-searchindex.php" class="w3-bar-item w3-button">Search</a>
 	<!--<a href="https://cse.google.com/cse/publicurl?cx=006138548068799998894:qvlkperwosg" class="w3-bar-item w3-button">Search</a>-->
