Needed to update mobile teambuilder link

--- a/topbar.html
+++ b/topbar.html
@@ -37,7 +37,7 @@
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large">
-    <a href="http://dicecoalition.com/teambuilder.html" class="w3-bar-item w3-button">Team Builder</a>
+    <a href="http://tb.dicecoalition.com" class="w3-bar-item w3-button">Team Builder</a>
     <a href="http://dicecoalition.com/tiki/tiki-index.php?page=New+Players" class="w3-bar-item w3-button">New Players</a>
     <a href="http://wiki.dicecoalition.com" class="w3-bar-item w3-button">Wiki</a>
     <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Articles" class="w3-bar-item w3-button">Articles</a>
