--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <div class="mySlides w3-animate-right dice-home-slider1" onclick="window.open('https://player.fm/series/the-ministry-of-dice-a-uk-dice-masters-podcast/br6-ep-15-spanky-says-send-us-some-more-free-stuff'); return false;"></div>
     <div class="mySlides w3-animate-right dice-home-slider2" onclick="window.open('https://www.youtube.com/watch?v=lzSp8Bz-ynQ'); return false;"></div>
     <div class="mySlides w3-animate-right dice-home-slider3" onclick="window.open('http://ktdata.net/category/dice-masters/'); return false;"></div>
-    <div class="mySlides w3-animate-right dice-home-slider4" onclick="window.open('http://gamingwithsidekicks.com/2018/02/15/414/'); return false;"></div>
-    <div class="mySlides w3-animate-right dice-home-slider5" onclick="window.open('https://thegeekkitty.wordpress.com/2018/02/14/dice-masters-confusing-card-of-the-week-124-heimdall-the-all-seeing/'); return false;"></div>
+    <div class="mySlides w3-animate-right dice-home-slider4" onclick="window.open('http://gamingwithsidekicks.com/category/podcast/'); return false;"></div>
+    <div class="mySlides w3-animate-right dice-home-slider5" onclick="window.open('https://thegeekkitty.wordpress.com/category/dice-masters/'); return false;"></div>
     <div class="mySlides w3-animate-right dice-home-slider6" onclick="window.open('https://www.youtube.com/watch?v=654qxt7hdpc'); return false;"></div>
 
     <div class="w3-center w3-display-bottommiddle" style="width:100%">
