--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <!-- Image Header -->
 <div class="w3-content2 w3-display-container" style="top:38.4px; bottom-padding:38.4px;">
+    <div class="mySlides w3-animate-right dice-home-slider7" onclick="window.open('http://dicecoalition.com/tiki/tiki-read_article.php?articleId=8'); return false;"></div>
     <div class="mySlides w3-animate-right dice-home-slider1" onclick="window.open('https://player.fm/series/the-ministry-of-dice-a-uk-dice-masters-podcast/br6-ep-15-spanky-says-send-us-some-more-free-stuff'); return false;"></div>
     <div class="mySlides w3-animate-right dice-home-slider2" onclick="window.open('https://www.youtube.com/watch?v=lzSp8Bz-ynQ'); return false;"></div>
     <div class="mySlides w3-animate-right dice-home-slider3" onclick="window.open('http://ktdata.net/category/dice-masters/'); return false;"></div>
@@ -46,6 +47,7 @@
     <span class="w3-badge demo w3-border" onclick="currentDiv(4)"></span>
     <span class="w3-badge demo w3-border" onclick="currentDiv(5)"></span>
     <span class="w3-badge demo w3-border" onclick="currentDiv(6)"></span>
+    <span class="w3-badge demo w3-border" onclick="currentDiv(7)"></span>
   </div>
 </div>
 <div style="height:38.4px"></div>
