--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 <!-- Image Header -->
 <div class="w3-content2 w3-display-container" style="top:38.4px; bottom-padding:38.4px;">
     <div class="mySlides w3-animate-right dice-home-slider7" onclick="window.open('http://dicecoalition.com/tiki/tiki-read_article.php?articleId=8'); return false;"></div>
-    <div class="mySlides w3-animate-right dice-home-slider1" onclick="window.open('https://player.fm/series/the-ministry-of-dice-a-uk-dice-masters-podcast/br6-ep-15-spanky-says-send-us-some-more-free-stuff'); return false;"></div>
-    <div class="mySlides w3-animate-right dice-home-slider2" onclick="window.open('https://www.youtube.com/watch?v=lzSp8Bz-ynQ'); return false;"></div>
+    <div class="mySlides w3-animate-right dice-home-slider1" onclick="window.open('https://player.fm/series/the-ministry-of-dice-a-uk-dice-masters-podcast'); return false;"></div>
+    <div class="mySlides w3-animate-right dice-home-slider2" onclick="window.open('https://www.youtube.com/channel/UCLYtjHT4lwcN8-e5Fh9Rigg'); return false;"></div>
     <div class="mySlides w3-animate-right dice-home-slider3" onclick="window.open('http://ktdata.net/category/dice-masters/'); return false;"></div>
     <div class="mySlides w3-animate-right dice-home-slider4" onclick="window.open('http://gamingwithsidekicks.com/category/podcast/'); return false;"></div>
     <div class="mySlides w3-animate-right dice-home-slider5" onclick="window.open('https://thegeekkitty.wordpress.com/category/dice-masters/'); return false;"></div>
-    <div class="mySlides w3-animate-right dice-home-slider6" onclick="window.open('https://www.youtube.com/watch?v=654qxt7hdpc'); return false;"></div>
+    <div class="mySlides w3-animate-right dice-home-slider6" onclick="window.open('https://www.youtube.com/channel/UCaCw9wKJbPJw3CqxJOXFvwQ'); return false;"></div>
 
     <div class="w3-center w3-display-bottommiddle" style="width:100%">
     <div class="w3-left" onclick="plusDivs(-1)"><i class="fa fa-chevron-left tdc-dk-blue-bg" style="padding:7px 10px 7px 8px; border-radius:15px"></i></div>
