Rotation FAQ link fix
Forgot to have it open in a new page

--- a/topbar.html
+++ b/topbar.html
@@ -28,7 +28,7 @@
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Rulebooks&structure=New+Players" class="w3-bar-item w3-button">Rulebooks</a>
       <a href="http://win.wizkids.com/" target="_blank" class="w3-bar-item w3-button">Where to Play</a>
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Gear+and+Storage&structure=New+Players" class="w3-bar-item w3-button">Gear and Storage</a>
-      <a href="https://wizkids.com/dicemasters/dice-masters-rotation-faq/" class="w3-bar-item w3-button">Rotation FAQ</a>
+      <a href="https://wizkids.com/dicemasters/dice-masters-rotation-faq/" target="_blank" class="w3-bar-item w3-button">Rotation FAQ</a>
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Online+Play&structure=New+Players" class="w3-bar-item w3-button">Online Play</a>
     </div>
   </div>
