Added Where to Trade to top bar

--- a/topbar.html
+++ b/topbar.html
@@ -27,6 +27,7 @@
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=How+to+Play&structure=New+Players" class="w3-bar-item w3-button">How to Play</a>
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Rulebooks&structure=New+Players" class="w3-bar-item w3-button">Rulebooks</a>
       <a href="http://win.wizkids.com/" target="_blank" class="w3-bar-item w3-button">Where to Play</a>
+      <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Where+to+Trade&structure=New+Players" class="w3-bar-item w3-button">Where to Trade</a>
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Gear+and+Storage&structure=New+Players" class="w3-bar-item w3-button">Gear and Storage</a>
       <a href="https://wizkids.com/dicemasters/dice-masters-rotation-faq/" target="_blank" class="w3-bar-item w3-button">Rotation FAQ</a>
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Online+Play&structure=New+Players" class="w3-bar-item w3-button">Online Play</a>
