adding draft pack generator to top bar
/me cries silently

--- a/topbar.html
+++ b/topbar.html
@@ -6,7 +6,7 @@
   <a href="http://dicecoalition.com/tiki/tiki-searchindex.php" class="w3-bar-item w3-button w3-hide-small w3-right w3-button" title="Search"><i class="fa fa-search"></i></a>
  
   <div class="w3-dropdown-hover w3-hide-small">
-    <button class="w3-button" title="Notifications">Community <i class="fa fa-caret-down"></i></button>
+    <button class="w3-button" title="Community">Community <i class="fa fa-caret-down"></i></button>
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
       <a href="http://dicecoalition.com/tiki/tiki-list_blogs.php" class="w3-bar-item w3-button">Blogs</a>
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Create+an+Article&structure=Community" class="w3-bar-item w3-button">Create an Article/Blog</a>
@@ -19,10 +19,17 @@
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Links&structure=Community" class="w3-bar-item w3-button">General Information Links</a>
     </div>
   </div>
+  <div class="w3-dropdown-hover w3-hide-small">
+    <button class="w3-button" title="Tools">Tools <i class="fa fa-caret-down"></i></button>
+    <div class="w3-dropdown-content w3-card-4 w3-bar-block">
+      <a href="http://tb.dicecoalition.com/" class="w3-bar-item w3-button">Team Builder</a>
+      <a href="http://dp.dicecoalition.com/" class="w3-bar-item w3-button">Draft Pack Generator</a>
+    </div>
+  </div>
   <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Articles" class="w3-bar-item w3-button w3-hide-small">Articles</a>
   <a href="http://wiki.dicecoalition.com" class="w3-bar-item w3-button w3-hide-small">Wiki</a>
   <div class="w3-dropdown-hover w3-hide-small">
-    <button class="w3-button" title="Notifications">New Players <i class="fa fa-caret-down"></i></button>
+    <button class="w3-button" title="New Players">New Players <i class="fa fa-caret-down"></i></button>
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=How+to+Play&structure=New+Players" class="w3-bar-item w3-button">How to Play</a>
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Rulebooks&structure=New+Players" class="w3-bar-item w3-button">Rulebooks</a>
@@ -33,16 +40,31 @@
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Online+Play&structure=New+Players" class="w3-bar-item w3-button">Online Play</a>
     </div>
   </div>
-  <a href="http://tb.dicecoalition.com" class="w3-bar-item w3-button w3-hide-small">Team Builder</a>
+  <div class="w3-dropdown-hover w3-hide-small">
+    <button class="w3-button" title="Team Builder"><a href="http://tb.dicecoalition.com">
+    <img style="position:relative; margin-bottom:-5px; top:-4px; height:24px;" src="http://dicecoalition.com/images/teambuilder_icon.png" 
+      onMouseMove="this.src='http://dicecoalition.com/images/teambuilder_icon_gold.png'"
+      onMouseOut="this.src='http://dicecoalition.com/images/teambuilder_icon.png'" />
+    </a>
+    </button>
+    <div class="w3-dropdown-content" style="top:45px; background-color:#999999; border-radius:5px; font-size:0.75rem; text-align:left;">
+      <a href="http://tb.dicecoalition.com" style="text-decoration:none;">&nbsp&nbsp Team Builder</a>
+    </div>
+  </div>
   <a href="http://dicecoalition.com/" class="w3-bar-item w3-button tdc-gold-bg-hover tdc-gold-bg w3-left"><i class="fa fa-cube w3-margin-right"></i>The Dice Coalition</a>
  </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-theme-d2 w3-hide w3-hide-large">
-    <a href="http://tb.dicecoalition.com" class="w3-bar-item w3-button">Team Builder</a>
+    <a href="http://tb.dicecoalition.com" class="w3-bar-item w3-button">
+      Team Builder
+      <img style="height: 18px;" src="http://dicecoalition.com/images/teambuilder_icon.png" 
+      onmouseover="this.src='http://dicecoalition.com/images/teambuilder_icon_gold.png'"
+      onmouseout="this.src='http://dicecoalition.com/images/teambuilder_icon.png'" /></a>
     <a href="http://dicecoalition.com/tiki/tiki-index.php?page=New+Players" class="w3-bar-item w3-button">New Players</a>
     <a href="http://wiki.dicecoalition.com" class="w3-bar-item w3-button">Wiki</a>
     <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Articles" class="w3-bar-item w3-button">Articles</a>
+    <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Tools" class="w3-bar-item w3-button">Tools</a>
     <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Community" class="w3-bar-item w3-button">Community</a>
 	<a href="http://dicecoalition.com/tiki/tiki-searchindex.php" class="w3-bar-item w3-button">Search</a>
 	<!--<a href="https://cse.google.com/cse/publicurl?cx=006138548068799998894:qvlkperwosg" class="w3-bar-item w3-button">Search</a>-->
