--- a/topbar.html
+++ b/topbar.html
@@ -41,12 +41,13 @@
     </div>
   </div>
   <div class="w3-dropdown-hover w3-hide-small">
-    <button class="w3-button" title="Team Builder"><a href="http://tb.dicecoalition.com">
+    <a href="http://tb.dicecoalition.com" class="w3-button btn btn-default">
+    <!--<button class="w3-button" title="Team Builder" onclick="window.location.href='http://tb.dicecoalition.com'">-->
     <img style="position:relative; margin-bottom:-5px; top:-4px; height:24px;" src="http://dicecoalition.com/images/teambuilder_icon.png" 
       onMouseMove="this.src='http://dicecoalition.com/images/teambuilder_icon_gold.png'"
-      onMouseOut="this.src='http://dicecoalition.com/images/teambuilder_icon.png'" />
-    </a>
-    </button>
+      onMouseOut="this.src='http://dicecoalition.com/images/teambuilder_icon.png'" />    
+    <!--</button>-->
+	</a>
     <div class="w3-dropdown-content" style="top:45px; background-color:#999999; border-radius:5px; font-size:0.75rem; text-align:left;">
       <a href="http://tb.dicecoalition.com" style="text-decoration:none;">&nbsp&nbsp Team Builder</a>
     </div>
