Forgot to open new links in new tab

--- a/topbar.html
+++ b/topbar.html
@@ -24,8 +24,8 @@
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
       <a href="http://tb.dicecoalition.com/" class="w3-bar-item w3-button">Team Builder</a>
       <a href="http://dp.dicecoalition.com/" class="w3-bar-item w3-button">Draft Pack Generator</a>
-      <a href="https://proxydice.com/" class="w3-bar-item w3-button">Proxy Dice (search by character name)</a>
-      <a href="http://dm.retrobox.eu/maker/maker.html" class="w3-bar-item w3-button">Custom Card Maker</a>
+      <a href="https://proxydice.com/" target="_blank" class="w3-bar-item w3-button">Proxy Dice (search by character name)</a>
+      <a href="http://dm.retrobox.eu/maker/maker.html" target="_blank" class="w3-bar-item w3-button">Custom Card Maker</a>
     </div>
   </div>
   <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Articles" class="w3-bar-item w3-button w3-hide-small">Articles</a>
