Added Hangouts Rooms

--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
     <h2 class="tdc-lt-blue-bg w3-round-small w3-center">Recent Rulings</h2>
     <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="63984/"></script> <!-- end feedwind code -->
   </div>
-  
+    <div class="w3-container w3-padding-16 w3-margin w3-round-small tdc-neutral subflex" id="hangouts rooms">
+    <h2 class="tdc-lt-blue-bg w3-round-small w3-center">Hangouts Rooms</h2>
+    <p><a href="https://hangouts.google.com/hangouts/_/3o3cuss4erbizpfiv4stqmcqzye" target="_blank">Room 1</a></p>
+    <p><a href="https://hangouts.google.com/hangouts/_/yavwwj66nze77okn5cwzbxt42me" target="_blank">Room 2</a></p>
+    <p><a href="https://hangouts.google.com/hangouts/_/fig3nnvfvjcuddg2dpfgqnglx4e" target="_blank">Room 3</a></p>
+    <p><a href="https://hangouts.google.com/hangouts/_/jfoh7dr7ffcvvlfjf3rshkcovme" target="_blank">Room 4</a></p>
+  </div>
 </div>
 </div>
 
