tweaking test pages for hangouts rooms

--- a/topbartest.html
+++ b/topbartest.html
@@ -8,13 +8,15 @@
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button" title="Community">Community <i class="fa fa-caret-down"></i></button>
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-      <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Online+Play&structure=New+Players" class="w3-bar-item w3-button">Online Play <i class="fa fa-caret-down"></i></a>
       <div class="w3-dropdown-hover">
-        <button class="w3-bar-item w3-button">Hangouts Rooms</button>
-        <a href="https://hangouts.google.com/hangouts/_/3o3cuss4erbizpfiv4stqmcqzye" target="_blank" class="w3-bar-item w3-button">Room 1</a>
-        <a href="https://hangouts.google.com/hangouts/_/yavwwj66nze77okn5cwzbxt42me" target="_blank" class="w3-bar-item w3-button">Room 2</a>
-        <a href="https://hangouts.google.com/hangouts/_/fig3nnvfvjcuddg2dpfgqnglx4e" target="_blank" class="w3-bar-item w3-button">Room 3</a>
-        <a href="https://hangouts.google.com/hangouts/_/jfoh7dr7ffcvvlfjf3rshkcovme" target="_blank" class="w3-bar-item w3-button">Room 4</a>
+        <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Online+Play&structure=New+Players" class="w3-bar-item w3-button">Online Play <i class="fa fa-caret-down"></i></a>
+        <div class="w3-dropdown-content w3-card-4 w3-bar-block">
+          <button class="w3-bar-item w3-button">Hangouts Rooms</button>
+          <a href="https://hangouts.google.com/hangouts/_/3o3cuss4erbizpfiv4stqmcqzye" target="_blank" class="w3-bar-item w3-button">Room 1</a>
+          <a href="https://hangouts.google.com/hangouts/_/yavwwj66nze77okn5cwzbxt42me" target="_blank" class="w3-bar-item w3-button">Room 2</a>
+          <a href="https://hangouts.google.com/hangouts/_/fig3nnvfvjcuddg2dpfgqnglx4e" target="_blank" class="w3-bar-item w3-button">Room 3</a>
+          <a href="https://hangouts.google.com/hangouts/_/jfoh7dr7ffcvvlfjf3rshkcovme" target="_blank" class="w3-bar-item w3-button">Room 4</a>
+        </div>
       </div>
       <a href="http://dicecoalition.com/tiki/tiki-list_blogs.php" class="w3-bar-item w3-button">Blogs</a>
       <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Create+an+Article&structure=Community" class="w3-bar-item w3-button">Create an Article/Blog</a>
