last tweaks to top bar test

--- a/topbartest.html
+++ b/topbartest.html
@@ -8,9 +8,9 @@
   <div class="w3-dropdown-hover w3-hide-small">
     <button class="w3-button" title="Community">Community <i class="fa fa-caret-down"></i></button>
     <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-      <div class="w3-dropdown-hover">
+      <div class="w3-sub-dropdown-hover">
         <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Online+Play&structure=New+Players" class="w3-bar-item w3-button">Online Play <i class="fa fa-caret-down"></i></a>
-        <div class="w3-dropdown-content w3-card-4 w3-bar-block">
+        <div class="w3-sub-dropdown-content w3-card-4 w3-bar-block">
           <button class="w3-bar-item w3-button">Hangouts Rooms</button>
           <a href="https://hangouts.google.com/hangouts/_/3o3cuss4erbizpfiv4stqmcqzye" target="_blank" class="w3-bar-item w3-button">Room 1</a>
           <a href="https://hangouts.google.com/hangouts/_/yavwwj66nze77okn5cwzbxt42me" target="_blank" class="w3-bar-item w3-button">Room 2</a>
