--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body id="myPage" style="background-color:#ebebeb">
 
 <!--Navbar-->
-<div w3-include-html="topbartest.html"></div>
+<div w3-include-html="topbar.html"></div>
 
 <!-- Image Header -->
 <div class="w3-content2 w3-display-container" style="top:38.4px; bottom-padding:38.4px;">
