Reorder homepage, move News below Media

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <title>The Dice Coalition</title>
@@ -54,26 +54,30 @@
 
 <!--Content Flexbox-->
 <div style="display:flex; justify-content:center;">
-<div class="flex-container">
+    <div class="flex-container">
 
-<!-- SubFlexboxes -->
-  <div class="w3-container w3-padding-16 w3-margin w3-round-small tdc-neutral subflex" id="news">
-    <h2 class="tdc-lt-blue-bg w3-round-small w3-center">News</h2>
-    <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="64802/"></script> <!-- end feedwind code -->
-  </div>
-  <div class="w3-container w3-padding-16 w3-margin tdc-neutral subflex" id="blog">
-    <h2 class="tdc-lt-blue-bg w3-round-small w3-center">Articles</h2>
-    <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="65038/"></script> <!-- end feedwind code -->
-  </div>
-  <div class="w3-container w3-padding-16 w3-margin tdc-neutral subflex" id="podcast">
-    <h2 class="tdc-lt-blue-bg w3-round-small w3-center">Media</h2>
-    <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="63933/"></script> <!-- end feedwind code -->
-  </div>
-  <div class="w3-container w3-padding-16 w3-margin tdc-neutral subflex" id="links">
-    <h2 class="tdc-lt-blue-bg w3-round-small w3-center">Recent Rulings</h2>
-    <!-- start feedwind code --> <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="63984/"></script> <!-- end feedwind code -->
-  </div>
-</div>
+        <!-- SubFlexboxes -->
+        <div class="w3-container w3-padding-16 w3-margin tdc-neutral subflex" id="blog">
+            <h2 class="tdc-lt-blue-bg w3-round-small w3-center">Articles</h2>
+            <!-- start feedwind code -->
+            <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="65038/"></script> <!-- end feedwind code -->
+        </div>
+        <div class="w3-container w3-padding-16 w3-margin tdc-neutral subflex" id="podcast">
+            <h2 class="tdc-lt-blue-bg w3-round-small w3-center">Media</h2>
+            <!-- start feedwind code -->
+            <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="63933/"></script> <!-- end feedwind code -->
+        </div>
+        <div class="w3-container w3-padding-16 w3-margin w3-round-small tdc-neutral subflex" id="news">
+            <h2 class="tdc-lt-blue-bg w3-round-small w3-center">News</h2>
+            <!-- start feedwind code -->
+            <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="64802/"></script> <!-- end feedwind code -->
+        </div>
+        <div class="w3-container w3-padding-16 w3-margin tdc-neutral subflex" id="links">
+            <h2 class="tdc-lt-blue-bg w3-round-small w3-center">Recent Rulings</h2>
+            <!-- start feedwind code -->
+            <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" data-fw-param="63984/"></script> <!-- end feedwind code -->
+        </div>
+    </div>
 </div>
 
 <!-- Footer -->
