Update Rooms after Hangouts closed down

--- a/topbar.html
+++ b/topbar.html
@@ -11,12 +11,14 @@
       <div class="w3-sub-dropdown-hover">
         <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Online+Play&structure=New+Players" class="w3-bar-item w3-button">Online Play <i class="fa fa-caret-down"></i></a>
         <div class="w3-sub-dropdown-content w3-card-4 w3-bar-block">
-          <a href="https://hangouts.google.com/hangouts/_/3o3cuss4erbizpfiv4stqmcqzye" target="_blank" class="w3-bar-item w3-button">Room 1</a>
-          <a href="https://hangouts.google.com/hangouts/_/yavwwj66nze77okn5cwzbxt42me" target="_blank" class="w3-bar-item w3-button">Room 2</a>
-          <a href="https://hangouts.google.com/hangouts/_/fig3nnvfvjcuddg2dpfgqnglx4e" target="_blank" class="w3-bar-item w3-button">Room 3</a>
-          <a href="https://hangouts.google.com/hangouts/_/jfoh7dr7ffcvvlfjf3rshkcovme" target="_blank" class="w3-bar-item w3-button">Room 4</a>
-          <a href="https://hangouts.google.com/hangouts/_/li1WKJ8tQ3iO9HMyp156AAEE" target="_blank" class="w3-bar-item w3-button">Room 5</a>
-          <a href="https://hangouts.google.com/hangouts/_/ovdh_avlV0C0j1zTSOpCAAEE" target="_blank" class="w3-bar-item w3-button">Room 6</a>
+          <a href="https://talk.brave.com/MOuciFh641lpx2tu6pNKeAQ1YOCOdLnr7vxWNZBCnVs" target="_blank" class="w3-bar-item w3-button">Room 1 (Brave Talk)</a>
+          <a href="https://talk.brave.com/sxKyqxO661xXnI7T8MA7K1vr1Df6D_HJMSwn7r7_9jo" target="_blank" class="w3-bar-item w3-button">Room 2 (Brave Talk)</a>
+          <a href="https://talk.brave.com/_V8Di4g1hBh0nMO2YU8yANoxe32yPGufaP11L3vn2Vg" target="_blank" class="w3-bar-item w3-button">Room 3 (Brave Talk)</a>
+          <a href="https://talk.brave.com/AxwIcwudBNAXyklmfLz8IbcU3RxxVuO8oIe4iAgQ3Hw" target="_blank" class="w3-bar-item w3-button">Room 4 (Brave Talk)</a>
+          <a href="https://meet.jit.si/DiceCoalitionRoom5" target="_blank" class="w3-bar-item w3-button">Room 5 (Jitsi)</a>
+          <a href="https://meet.jit.si/DiceCoalitionRoom6" target="_blank" class="w3-bar-item w3-button">Room 6 (Jitsi)</a>
+          <a href="https://meet.jit.si/DiceCoalitionRoom7" target="_blank" class="w3-bar-item w3-button">Room 7 (Jitsi)</a>
+          <a href="https://meet.jit.si/DiceCoalitionRoom8" target="_blank" class="w3-bar-item w3-button">Room 8 (Jitsi)</a>
         </div>
       </div>
       <a href="http://dicecoalition.com/tiki/tiki-list_blogs.php" class="w3-bar-item w3-button">Blogs</a>
