Issue with Brave Talk, try Discord link

--- a/topbar.html
+++ b/topbar.html
@@ -11,14 +11,18 @@
       <div class="w3-sub-dropdown-hover">
         <a href="http://dicecoalition.com/tiki/tiki-index.php?page=Online+Play&structure=New+Players" class="w3-bar-item w3-button">Online Play <i class="fa fa-caret-down"></i></a>
         <div class="w3-sub-dropdown-content w3-card-4 w3-bar-block">
-          <a href="https://talk.brave.com/MOuciFh641lpx2tu6pNKeAQ1YOCOdLnr7vxWNZBCnVs" target="_blank" class="w3-bar-item w3-button">Room 1 (Brave Talk)</a>
-          <a href="https://talk.brave.com/sxKyqxO661xXnI7T8MA7K1vr1Df6D_HJMSwn7r7_9jo" target="_blank" class="w3-bar-item w3-button">Room 2 (Brave Talk)</a>
-          <a href="https://talk.brave.com/_V8Di4g1hBh0nMO2YU8yANoxe32yPGufaP11L3vn2Vg" target="_blank" class="w3-bar-item w3-button">Room 3 (Brave Talk)</a>
-          <a href="https://talk.brave.com/AxwIcwudBNAXyklmfLz8IbcU3RxxVuO8oIe4iAgQ3Hw" target="_blank" class="w3-bar-item w3-button">Room 4 (Brave Talk)</a>
+          <a href="https://discord.gg/BJsBPnrSat" target="_blank" class="w3-bar-item w3-button">Room 1 (Discord)</a>
+          <a href="https://discord.gg/dFHa5F6wUv" target="_blank" class="w3-bar-item w3-button">Room 2 (Discord)</a>
+          <a href="https://discord.gg/p2RQHg3Uh4" target="_blank" class="w3-bar-item w3-button">Room 3 (Discord)</a>
+          <a href="https://discord.gg/YnGPJMRkY3" target="_blank" class="w3-bar-item w3-button">Room 4 (Discord)</a>
           <a href="https://meet.jit.si/DiceCoalitionRoom5" target="_blank" class="w3-bar-item w3-button">Room 5 (Jitsi)</a>
           <a href="https://meet.jit.si/DiceCoalitionRoom6" target="_blank" class="w3-bar-item w3-button">Room 6 (Jitsi)</a>
           <a href="https://meet.jit.si/DiceCoalitionRoom7" target="_blank" class="w3-bar-item w3-button">Room 7 (Jitsi)</a>
           <a href="https://meet.jit.si/DiceCoalitionRoom8" target="_blank" class="w3-bar-item w3-button">Room 8 (Jitsi)</a>
+          <a href="https://talk.brave.com/MOuciFh641lpx2tu6pNKeAQ1YOCOdLnr7vxWNZBCnVs" target="_blank" class="w3-bar-item w3-button">Room 9 (Brave Talk)</a>
+          <a href="https://talk.brave.com/sxKyqxO661xXnI7T8MA7K1vr1Df6D_HJMSwn7r7_9jo" target="_blank" class="w3-bar-item w3-button">Room 10 (Brave Talk)</a>
+          <a href="https://talk.brave.com/_V8Di4g1hBh0nMO2YU8yANoxe32yPGufaP11L3vn2Vg" target="_blank" class="w3-bar-item w3-button">Room 11 (Brave Talk)</a>
+          <a href="https://talk.brave.com/AxwIcwudBNAXyklmfLz8IbcU3RxxVuO8oIe4iAgQ3Hw" target="_blank" class="w3-bar-item w3-button">Room 12 (Brave Talk)</a>
         </div>
       </div>
       <a href="http://dicecoalition.com/tiki/tiki-list_blogs.php" class="w3-bar-item w3-button">Blogs</a>
